# obsidian-automation

./: .gitignore  README.md  config.py  custom_prompt.md  keyword_manager.py  keywords.json  keywords_reconstruction.md  keywords_reconstructor.py  main.py  obsidian_note_creator.py  pdf_processor.py  pyproject.toml  pytest.ini  run_tests.py  template.md  zotero_integrator.py
prompt/: custom_prompt-en.md  custom_prompt.md  keywords_reconstruction-en.md  keywords_reconstruction.md
samples/: Dashboard.md  paper.css
src/obsidian_automation/: __init__.py  keyword_manager.py  keywords_reconstructor.py  obsidian_note_creator.py  pdf_processor.py  zotero_integrator.py
template/: template.md
tests/: test_keyword_manager.py  test_keywords_reconstructor.py  test_main.py  test_obsidian_note_creator.py  test_pdf_processor.py  test_simple.py  test_zotero_integrator.py
